# zenoa-engine

./: .clang-tidy  .gitattributes  .gitignore  API_REFERENCE.md  BUILD.md  CMakeLists.txt  LICENSE  NOTES.md  README.md  build.sh
.cache/clangd/index/: Bodies.h.833CBB205337553D.idx  BorderSystem.h.853FE0C715C0FD96.idx  CollisionSystem.h.B9B42BC799AB47DD.idx  EntityList.h.6992C013083C5F09.idx  EntityManager.cpp.82B7AA453F6CDCF8.idx  EntityManager.h.7C054E633202BE93.idx  IntegrationSystem.h.FA480B5C535DB168.idx  PhysicsSystem.h.B04EC3DE44C7DDB6.idx  Renderer.h.E58BDFDA9D1AE671.idx  SystemContext.h.C8BC6A021986160B.idx  allocator.cpp.794BCACB55F11A63.idx  bodies.h.E11A3D690D469D2B.idx  border.cpp.2C465836D48FDCA4.idx  border.h.B6968FD94F5DA464.idx  collision.cpp.F0115A582B4604A8.idx  collision.h.4709D89757E886BC.idx  constants.h.0F6F9AEF95407667.idx  constants.h.33C4BFA70A069D19.idx  constants.h.C9DDB5FD8F3AE8C0.idx  context.h.FA2AE8221B111927.idx  convex_circle_scene.cpp.F8588237946C2247.idx  emfdtd.h.02FD64B8AE0F3F2C.idx  emfdtd.h.18B574060ED06A56.idx  emftdt.cpp.721467D9093A15A0.idx  emftdt.cpp.72F66ED157E4AEC8.idx  entityManager.cpp.A9A5C43C12CB51A3.idx  entity_list.h.7232869B72CBF155.idx  entity_manager.cpp.7B8F5B2581C0BA7F.idx  entity_manager.h.281AEF7114E2E0FD.idx  file_input.cpp.208CA424EA98380D.idx  file_output.cpp.FE2A4E306C3C71EC.idx  file_output.h.B689042F6B2400A2.idx  grid_allocator.cpp.17F131EC9AEAE156.idx  grid_update_naive.cpp.6CD89F59807F4309.idx  integration.cpp.5B991078D202E4AE.idx  integration.h.C69959068CCB0B6D.idx  interface.cpp.09A696ACEE408DA7.idx  interface.h.F03C24DE4931CDA4.idx  io.cpp.F5D376046DF6EEAF.idx  io.h.6159F6A4722D0002.idx  (+19 more)
docs/: INFO.md  implementation-details.md
examples/: basic_api_use.cpp  collision_demo.cpp
scripts/: Zenoa_flattened.txt  all_code_dump.txt  build.sh  clang-tidy.sh  flatten.py  ssh_send.sh
src/: convex_circle_scene.cpp  main.cpp  test.cpp
src/engine/: Bodies.h  DynamicList.h  ECS.h  EntityComponents.h  EntityList.h  EntityManager.cpp  EntityManager.h  MemoryArena.h  Simulation.cpp  Simulation.h  SimulationLifecycle.cpp  SimulationLifesycle.cpp  SystemContext.h  bodies.h  context.h  entity_list.h  entity_manager.cpp  entity_manager.h  interface.cpp  interface.h  memory.h
src/engine/PhysicsSystem/: BorderSystem.cpp  BorderSystem.h  CollisionSystem.cpp  CollisionSystem.h  IntegrationSystem.cpp  IntegrationSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
src/engine/physics_system/: border.cpp  border.h  collision.cpp  collision.h  integration.cpp  integration.h  physics.cpp  physics.h
src/graphics/: Renderer.h  renderer.h
src/utility/: Utility.cpp  Utility.h  Utillity.h
